Quick placeholder client API connect/login interfaces.