@@ -1,86 +1,4 @@
-/*
- Copyright (c) 2006 Sun Microsystems, Inc., 4150 Network Circle, Santa
- Clara, California 95054, U.S.A. All rights reserved.
- 
- Sun Microsystems, Inc. has intellectual property rights relating to
- technology embodied in the product that is described in this document.
- In particular, and without limitation, these intellectual property rights
- may include one or more of the U.S. patents listed at
- http://www.sun.com/patents and one or more additional patents or pending
- patent applications in the U.S. and in other countries.
- 
- U.S. Government Rights - Commercial software. Government users are subject
- to the Sun Microsystems, Inc. standard license agreement and applicable
- provisions of the FAR and its supplements.
- 
- This distribution may include materials developed by third parties.
- 
- Sun, Sun Microsystems, the Sun logo and Java are trademarks or registered
- trademarks of Sun Microsystems, Inc. in the U.S. and other countries.
- 
- UNIX is a registered trademark in the U.S. and other countries, exclusively
- licensed through X/Open Company, Ltd.
- 
- Products covered by and information contained in this service manual are
- controlled by U.S. Export Control laws and may be subject to the export
- or import laws in other countries. Nuclear, missile, chemical biological
- weapons or nuclear maritime end uses or end users, whether direct or
- indirect, are strictly prohibited. Export or reexport to countries subject
- to U.S. embargo or to entities identified on U.S. export exclusion lists,
- including, but not limited to, the denied persons and specially designated
- nationals lists is strictly prohibited.
- 
- DOCUMENTATION IS PROVIDED "AS IS" AND ALL EXPRESS OR IMPLIED CONDITIONS,
- REPRESENTATIONS AND WARRANTIES, INCLUDING ANY IMPLIED WARRANTY OF
- MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE OR NON-INFRINGEMENT,
- ARE DISCLAIMED, EXCEPT TO THE EXTENT THAT SUCH DISCLAIMERS ARE HELD TO BE
- LEGALLY INVALID.
- 
- Copyright © 2006 Sun Microsystems, Inc., 4150 Network Circle, Santa Clara,
- California 95054, Etats-Unis. Tous droits réservés.
- 
- Sun Microsystems, Inc. détient les droits de propriété intellectuels
- relatifs à la technologie incorporée dans le produit qui est décrit dans
- ce document. En particulier, et ce sans limitation, ces droits de
- propriété intellectuelle peuvent inclure un ou plus des brevets américains
- listés à l'adresse http://www.sun.com/patents et un ou les brevets
- supplémentaires ou les applications de brevet en attente aux Etats -
- Unis et dans les autres pays.
- 
- Cette distribution peut comprendre des composants développés par des
- tierces parties.
- 
- Sun, Sun Microsystems, le logo Sun et Java sont des marques de fabrique
- ou des marques déposées de Sun Microsystems, Inc. aux Etats-Unis et dans
- d'autres pays.
- 
- UNIX est une marque déposée aux Etats-Unis et dans d'autres pays et
- licenciée exlusivement par X/Open Company, Ltd.
- 
- see above Les produits qui font l'objet de ce manuel d'entretien et les
- informations qu'il contient sont regis par la legislation americaine en
- matiere de controle des exportations et peuvent etre soumis au droit
- d'autres pays dans le domaine des exportations et importations.
- Les utilisations finales, ou utilisateurs finaux, pour des armes
- nucleaires, des missiles, des armes biologiques et chimiques ou du
- nucleaire maritime, directement ou indirectement, sont strictement
- interdites. Les exportations ou reexportations vers des pays sous embargo
- des Etats-Unis, ou vers des entites figurant sur les listes d'exclusion
- d'exportation americaines, y compris, mais de maniere non exclusive, la
- liste de personnes qui font objet d'un ordre de ne pas participer, d'une
- facon directe ou indirecte, aux exportations des produits ou des services
- qui sont regi par la legislation americaine en matiere de controle des
- exportations et la liste de ressortissants specifiquement designes, sont
- rigoureusement interdites.
- 
- LA DOCUMENTATION EST FOURNIE "EN L'ETAT" ET TOUTES AUTRES CONDITIONS,
- DECLARATIONS ET GARANTIES EXPRESSES OU TACITES SONT FORMELLEMENT EXCLUES,
- DANS LA MESURE AUTORISEE PAR LA LOI APPLICABLE, Y COMPRIS NOTAMMENT TOUTE
- GARANTIE IMPLICITE RELATIVE A LA QUALITE MARCHANDE, A L'APTITUDE A UNE
- UTILISATION PARTICULIERE OU A L'ABSENCE DE CONTREFACON.
-*/
-
-package com.sun.gi.apps.chattest.client;
+package com.sun.sgs.test.client.chat;
 
 import java.awt.BorderLayout;
 import java.awt.Component;
@@ -92,11 +10,10 @@ import java.awt.event.MouseAdapter;
 import java.awt.event.MouseEvent;
 import java.awt.event.WindowEvent;
 import java.awt.event.WindowStateListener;
-import java.io.File;
-import java.net.MalformedURLException;
 import java.nio.ByteBuffer;
+import java.util.Arrays;
+import java.util.Collection;
 
-import javax.security.auth.callback.Callback;
 import javax.swing.DefaultListModel;
 import javax.swing.JButton;
 import javax.swing.JDesktopPane;
@@ -109,19 +26,17 @@ import javax.swing.JScrollPane;
 import javax.swing.ListCellRenderer;
 import javax.swing.ListSelectionModel;
 
-import com.sun.gi.comm.discovery.impl.URLDiscoverer;
-import com.sun.gi.comm.users.client.ClientAlreadyConnectedException;
-import com.sun.gi.comm.users.client.ClientChannel;
-import com.sun.gi.comm.users.client.ClientChannelListener;
-import com.sun.gi.comm.users.client.ClientConnectionManager;
-import com.sun.gi.comm.users.client.ClientConnectionManagerListener;
-import com.sun.gi.comm.users.client.impl.ClientConnectionManagerImpl;
-import com.sun.gi.utils.types.BYTEARRAY;
-import com.sun.gi.utils.types.StringUtils;
+import com.sun.sgs.client.ClientChannel;
+import com.sun.sgs.client.ClientChannelListener;
+import com.sun.sgs.client.ClientAuthenticator;
+import com.sun.sgs.client.ClientConnector;
+import com.sun.sgs.client.ClientAddress;
+import com.sun.sgs.client.ServerSession;
+import com.sun.sgs.client.ServerSessionListener;
 
 /**
  * <p>
- * The ChatTestClient implements a simple chat program using a Swing UI,
+ * The ChatClient implements a simple chat program using a Swing UI,
  * mainly for server channel testing purposes. It allows the user to
  * open arbitrary channels by name, or to use the Direct Client to
  * Client (DCC) channel.
@@ -162,16 +77,16 @@ import com.sun.gi.utils.types.StringUtils;
  * </p>
  * 
  * <p>
- * The ChatTestClient is designed to work with the server application,
+ * The ChatClient is designed to work with the server application,
  * ChatTest. This application must be installed and running on the
- * server for the ChatTestClient to successfully login. Multiple
+ * server for the ChatClient to successfully login. Multiple
  * instances of this program can be run so that multiple users will be
  * shown in the client.
  * </p>
  */
-public class ChatTestClient extends JFrame
-        implements ClientConnectionManagerListener {
-
+public class ChatClient extends JFrame
+        implements ServerSessionListener
+{
     private static final long serialVersionUID = 1L;
 
     JButton loginButton;
@@ -179,10 +94,11 @@ public class ChatTestClient extends JFrame
     JLabel statusMessage;
     JDesktopPane desktop;
 
-    JList userList; // a list of users currently connected to the
-                    // ChatTest app on the server.
+    JList userList; // a list of sessions currently connected to the
+                    // ChatApp on the server.
 
-    ClientConnectionManager mgr; // used for communication with the server.
+    ClientConnector connector; // used to create a session with the server. 
+    ServerSession session;  // used for communication with the server.
 
     ClientChannel dccChannel; // the well-known channel for Direct
                               // Client to Client communication.
@@ -190,16 +106,10 @@ public class ChatTestClient extends JFrame
     private JButton dccButton;
     private JButton serverSendButton;
     private static String DCC_CHAN_NAME = "__DCC_Chan";
-    
-    private String discoveryFileName = "discovery.xml";
 
-    public ChatTestClient(String[] args) {
+    public ChatClient(String[] args) {
         // build interface
         super();
-        
-        if (args.length > 0) {
-            discoveryFileName = args[0].substring(args[0].indexOf(":") + 1);
-        }
         
         setTitle("Chat Test Client");
         Container c = getContentPane();
@@ -222,11 +132,11 @@ public class ChatTestClient extends JFrame
         userList.addMouseListener(new MouseAdapter() {
             public void mouseClicked(MouseEvent evt) {
                 if (evt.getClickCount() > 1) {
-                    BYTEARRAY ba = (BYTEARRAY) userList.getSelectedValue();
-                    if (ba != null) {
+                    ClientAddress member = (ClientAddress) userList.getSelectedValue();
+                    if (member != null) {
                         String message = JOptionPane.showInputDialog(
-                                ChatTestClient.this, "Enter private message:");
-                        doDCCMessage(ba.data(), message);
+                                ChatClient.this, "Enter private message:");
+                        doDCCMessage(member, message);
                     }
                 }
 
@@ -238,8 +148,7 @@ public class ChatTestClient extends JFrame
 
             public Component getListCellRendererComponent(JList arg0,
                     Object arg1, int arg2, boolean arg3, boolean arg4) {
-                byte[] data = ((BYTEARRAY) arg1).data();
-                text.setText(StringUtils.bytesToHex(data, data.length - 4));
+                text.setText(String.format("%.8s", arg1.toString()));
                 return text;
             }
         });
@@ -258,40 +167,39 @@ public class ChatTestClient extends JFrame
 
         loginButton.addActionListener(new ActionListener() {
 
-            public void actionPerformed(ActionEvent e) {
+            public void actionPerformed(ActionEvent action) {
                 if (loginButton.getText().equals("Login")) {
                     loginButton.setEnabled(false);
-                    String[] classNames = mgr.getUserManagerClassNames();
-                    String choice = (String) JOptionPane.showInputDialog(
-                            ChatTestClient.this, "Choose a user manager",
-                            "User Manager Selection",
-                            JOptionPane.INFORMATION_MESSAGE, null, classNames,
-                            classNames[0]);
+                    // TODO - big time
+//                    String[] classNames = connector.getUserManagerClassNames();
+//                    String choice = (String) JOptionPane.showInputDialog(
+//                            ChatClient.this, "Choose a user manager",
+//                            "User Manager Selection",
+//                            JOptionPane.INFORMATION_MESSAGE, null, classNames,
+//                            classNames[0]);
                     try {
-                        mgr.connect(choice);
-                    } catch (ClientAlreadyConnectedException e1) {
-                        // TODO Auto-generated catch block
-                        e1.printStackTrace();
+                        connector.connect(null, ChatClient.this);
+                    } catch (Exception e) {
+                        e.printStackTrace();
                         System.exit(1);
                     }
                 } else {
-                    mgr.disconnect();
+                    session.logout(false);
                 }
-
             }
         });
 
         // Opens a channel by name on the server. If the channel doesn't
-        // exist,
-        // it will be opened. In either case, it will attempt to join
-        // the user
-        // to the specified channel.
+	// exist,
+	// it will be opened. In either case, it will attempt to join
+	// the user
+	// to the specified channel.
         openChannelButton = new JButton("Open Channel");
         openChannelButton.addActionListener(new ActionListener() {
             public void actionPerformed(ActionEvent e) {
                 String channelName = JOptionPane.showInputDialog(
-                        ChatTestClient.this, "Enter channel name");
-                mgr.openChannel(channelName);
+                        ChatClient.this, "Enter channel name");
+                openChannel(channelName);
             }
         });
         openChannelButton.setEnabled(false);
@@ -300,12 +208,9 @@ public class ChatTestClient extends JFrame
         serverSendButton = new JButton("Send to Server");
         serverSendButton.addActionListener(new ActionListener() {
             public void actionPerformed(ActionEvent arg0) {
-                Object[] targets = userList.getSelectedValues();
-                if (targets != null) {
-                    String message = JOptionPane.showInputDialog(
-                            ChatTestClient.this, "Enter server message:");
-                    doServerMessage(message);
-                }
+        	String message = JOptionPane.showInputDialog(
+        		ChatClient.this, "Enter server message:");
+        	doServerMessage(message);
             }
         });
         serverSendButton.setEnabled(false);
@@ -315,15 +220,11 @@ public class ChatTestClient extends JFrame
         dccButton = new JButton("Send Multi-DCC ");
         dccButton.addActionListener(new ActionListener() {
             public void actionPerformed(ActionEvent arg0) {
-                Object[] targets = userList.getSelectedValues();
+                ClientAddress[] targets = (ClientAddress[])userList.getSelectedValues();
                 if (targets != null) {
                     String message = JOptionPane.showInputDialog(
-                            ChatTestClient.this, "Enter private message:");
-                    byte[][] targetList = new byte[targets.length][];
-                    for (int i = 0; i < targets.length; i++) {
-                        targetList[i] = ((BYTEARRAY) targets[i]).data();
-                    }
-                    doMultiDCCMessage(targetList, message);
+                            ChatClient.this, "Enter private message:");
+                    doMultiDCCMessage(Arrays.asList(targets), message);
                 }
             }
         });
@@ -343,16 +244,12 @@ public class ChatTestClient extends JFrame
         // this case the app name is "ChatTest" and discovery.xml
         // lists the valid UserManagers.
         try {
-            mgr = new ClientConnectionManagerImpl("ChatTest",
-                    new URLDiscoverer(
-                            new File(discoveryFileName).toURI().toURL()));
-            // mgr = new ClientConnectionManagerImpl("ChatTest",
-            //     new URLDiscoverer(
-            //         new URL("http://yourhost.example.com/discovery.xml")));
-
-            mgr.setListener(this);
-
-        } catch (MalformedURLException e) {
+              // TODO - big time
+//            connector = new ClientConnectionManagerImpl("ChatTest",
+//                    new URLDiscoverer(
+//                            new File(discoveryFileName).toURI().toURL()));
+            connector = null; /* new TCPClientConnector(...) */
+        } catch (Exception e) {
             e.printStackTrace();
             System.exit(2);
         }
@@ -361,7 +258,7 @@ public class ChatTestClient extends JFrame
         this.addWindowStateListener(new WindowStateListener() {
             public void windowStateChanged(WindowEvent arg0) {
                 if (arg0.getNewState() == WindowEvent.WINDOW_CLOSED) {
-                    mgr.disconnect();
+                    session.logout(false);
                 }
             }
         });
@@ -374,10 +271,7 @@ public class ChatTestClient extends JFrame
      * @param message the message to send.
      */
     protected void doServerMessage(String message) {
-        ByteBuffer out = ByteBuffer.allocate(message.length());
-        out.put(message.getBytes());
-        mgr.sendToServer(out, true);
-
+        session.send(message.getBytes());
     }
 
     /**
@@ -386,11 +280,8 @@ public class ChatTestClient extends JFrame
      * @param targetList the list of users to send to
      * @param message the message to send
      */
-    protected void doMultiDCCMessage(byte[][] targetList, String message) {
-        ByteBuffer out = ByteBuffer.allocate(message.length());
-        out.put(message.getBytes());
-        dccChannel.sendMulticastData(targetList, out, true);
-
+    protected void doMultiDCCMessage(Collection<ClientAddress> targetList, String message) {
+        dccChannel.send(targetList, message.getBytes());
     }
 
     /**
@@ -399,30 +290,13 @@ public class ChatTestClient extends JFrame
      * @param target the user to send to.
      * @param message the message to send.
      */
-    protected void doDCCMessage(byte[] target, String message) {
-        ByteBuffer out = ByteBuffer.allocate(message.length());
-        out.put(message.getBytes());
-        dccChannel.sendUnicastData(target, out, true);
-
+    protected void doDCCMessage(ClientAddress target, String message) {
+        dccChannel.send(target, message.getBytes());
     }
 
-    /**
-     * ClientConnectionManagerListener callback.
-     * 
-     * Called by the ClientConnectionManager to request validation
-     * credentials. The ValidatorDialog takes over from here to populate
-     * the CallBacks with user data.
-     * 
-     * In the case of ChatTest, both a username and password are
-     * required.
-     * 
-     * @param callbacks the array of
-     * javax.security.auth.callbacks.CallBacks to validate against.
-     */
-    public void validationRequest(Callback[] callbacks) {
+    public void validationRequest(ClientAuthenticator auth) {
         statusMessage.setText("Status: Validating...");
-        new ValidatorDialog(this, callbacks);
-        mgr.sendValidationResponse(callbacks);
+        new ValidatorDialog(this, auth);
     }
 
     /**
@@ -434,15 +308,16 @@ public class ChatTestClient extends JFrame
      * @param myID the user's id. Used for future communication with the
      * server.
      */
-    public void connected(byte[] myID) {
+    public void connected(ServerSession session) {
+	this.session = session;
         statusMessage.setText("Status: Connected");
-        setTitle("Chat Test Client: " + StringUtils.bytesToHex(myID));
+        setTitle(String.format("Chat Test Client: %.8s", session.toString()));
         loginButton.setText("Logout");
         loginButton.setEnabled(true);
         openChannelButton.setEnabled(true);
         dccButton.setEnabled(true);
         serverSendButton.setEnabled(true);
-        mgr.openChannel(DCC_CHAN_NAME);
+        openChannel(DCC_CHAN_NAME);
     }
 
     /**
@@ -451,10 +326,10 @@ public class ChatTestClient extends JFrame
      * Called by the ClientConnectionManager if the login attempt
      * failed.
      * 
-     * @param message the reason for failure.
+     * @param reason the reason for failure.
      */
-    public void connectionRefused(String message) {
-        statusMessage.setText("Status: Connection refused. (" + message + ")");
+    public void loginFailed(String reason) {
+        statusMessage.setText("Status: Connection refused. (" + reason + ")");
         loginButton.setText("Login");
         loginButton.setEnabled(true);
     }
@@ -465,13 +340,13 @@ public class ChatTestClient extends JFrame
      * Called by ClientConnectionManager when the user is disconnected.
      * 
      */
-    public void disconnected() {
-        statusMessage.setText("Status: logged out");
-        loginButton.setText("Login");
-        loginButton.setEnabled(true);
+    public void disconnected(boolean graceful) {
         openChannelButton.setEnabled(false);
         dccButton.setEnabled(false);
         serverSendButton.setEnabled(false);
+        statusMessage.setText("Status: logged out");
+        loginButton.setText("Login");
+        loginButton.setEnabled(true);
     }
 
     /**
@@ -483,9 +358,9 @@ public class ChatTestClient extends JFrame
      * 
      * @param userID the new user
      */
-    public void userJoined(byte[] userID) {
+    public void memberLogin(ClientAddress member) {
         DefaultListModel mdl = (DefaultListModel) userList.getModel();
-        mdl.addElement(new BYTEARRAY(userID));
+        mdl.addElement(member);
         userList.repaint();
 
     }
@@ -499,9 +374,9 @@ public class ChatTestClient extends JFrame
      * 
      * @param userID the user that left.
      */
-    public void userLeft(byte[] userID) {
+    public void memberLogout(ClientAddress member) {
         DefaultListModel mdl = (DefaultListModel) userList.getModel();
-        mdl.removeElement(new BYTEARRAY(userID));
+        mdl.removeElement(member);
         userList.repaint();
     }
 
@@ -510,7 +385,7 @@ public class ChatTestClient extends JFrame
      * 
      * Called by the ClientConnectionManager as confirmation that the
      * user joined the given channel. If the channel is the DCC channel,
-     * a ClientChannelListener will be attached to receive data from it.
+     * a ChannelListener will be attached to receive data from it.
      * 
      * @param channel the channel to which the user was joined.
      */
@@ -519,23 +394,16 @@ public class ChatTestClient extends JFrame
             dccChannel = channel;
             dccChannel.setListener(new ClientChannelListener() {
 
-                public void playerJoined(byte[] playerID) {}
-
-                public void playerLeft(byte[] playerID) {}
-
-                public void dataArrived(byte[] from, ByteBuffer data,
-                        boolean reliable) {
-                    byte[] bytes = new byte[data.remaining()];
-                    data.get(bytes);
-                    JOptionPane.showMessageDialog(ChatTestClient.this,
-                            new String(bytes), "Message from "
-                                    + StringUtils.bytesToHex(from,
-                                            from.length - 4),
+		public void receivedMessage(ClientChannel channel, ClientAddress sender, byte[] message)
+		{
+                    JOptionPane.showMessageDialog(ChatClient.this,
+                            new String(message),
+                            String.format("Message from %.8s",
+                                    sender.toString()),
                             JOptionPane.INFORMATION_MESSAGE);
-
                 }
 
-                public void channelClosed() {}
+		public void leftChannel(ClientChannel channel) { }
             });
         } else {
             ChatChannelFrame cframe = new ChatChannelFrame(channel);
@@ -550,27 +418,40 @@ public class ChatTestClient extends JFrame
      * @param args
      */
     public static void main(String[] args) {
-        new ChatTestClient(args);
-
+        new ChatClient(args);
     }
 
-    public void failOverInProgress() {
-        // TODO Auto-generated method stub
+    private void openChannel(String channelName) {
+	String cmd = "/join " + channelName;
+	session.send(cmd.getBytes());
+    }
+
+    public void receivedMessage(byte[] contents) {
+	String command = new String(contents);
+	System.err.format("ChatClient: Command recv [%s]\n", command);
+	if (command.startsWith("/login ")) {
+	    String memberString = command.substring(7);
+	    memberLogin(ClientAddress.fromBytes(ByteBuffer.wrap(memberString.getBytes())));
+	} else if (command.startsWith("/logout ")) {
+	    String memberString = command.substring(8);
+	    memberLogout(ClientAddress.fromBytes(ByteBuffer.wrap(memberString.getBytes())));
+	} else {
+	    System.err.format("ChatClient: Error, unknown command [%s]\n",
+		    command);
+	}
+    }
+
+    public void reconnecting() {
+        statusMessage.setText("Status: Reconnecting");
+        openChannelButton.setEnabled(false);
+        dccButton.setEnabled(false);
+        serverSendButton.setEnabled(false);
     }
 
     public void reconnected() {
-        // TODO Auto-generated method stub
-    }
-
-    /**
-     * This method is called whenever an attempted join/leave fails due
-     * to the target channel being locked.
-     * 
-     * @param channelName the name of the channel.
-     * @param userID the ID of the user attemping to join/leave
-     */
-    public void channelLocked(String channelName, byte[] userID) {
-        System.err.println("ChatTestClient received locked notification: " +
-                channelName);
+        statusMessage.setText("Status: Reconnected");
+        openChannelButton.setEnabled(true);
+        dccButton.setEnabled(true);
+        serverSendButton.setEnabled(true);
     }
 }
